@@ -123,6 +123,11 @@ public:
     return fixed(x) / GetScale();
   }
 
+  gcc_pure
+  fixed DistanceMetersToPixels(const fixed distance) const {
+    return distance * GetScale();
+  }
+
   /**
    * Returns the width of the map area in meters.
    */
